HISTORY

[Version x.y.z (x86 w2k driver size in Kbytes)   release date]

  Version 2.1.0 (24.0)   2009-01-
  ------------------------------------------------------------------------------
    - debug logging feature was added
    - website was completely redesigned
    - UltraDefrag Handbook was added
    - many important x64 bugs were fixed
    - winx_fopen: a, a+ modes were added
    - two different driver versions (for NT4 and later systems) were replaced 
      by one universal os version independent driver
    - installer was highly optimized


  Version 2.0.0 (24.0)   2008-11-13
  ------------------------------------------------------------------------------
    - scripting support for boot time interface was added
    - program options were moved to environment variables
    - UltraDefrag Micro Edition package was added
    - a lot of portable application bugs were fixed

    - gui program was translated into the following languages:

      Catala, Chinese (Simplified), Chinese (Traditional), Dutch, 
      French (FR), German, Greek, Italian, Portuguese, Slovak, Slovenian

    - boot-on, boot-off, ud-config scripts were added
    - few useful shortcuts were added
    - udefrag.dll great optimization was performed
    - many functions were added to zenwinx.dll
    - installer compression ratio was increased
    - gui design was improved

                                    ***

  Version 1.4.0 (22.5)   2008-10-02
  ------------------------------------------------------------------------------
    - i18n support was added
    - gui program was translated into Hungarian and Russian languages
    - documentation was improved
    - program settings were moved to one file
    - gui design was improved and simplified
    - console program's option -l was added
    - many significant bugs were fixed (possible buffer overflows)


  Version 1.3.4 (22.5)   2008-03-09
  ------------------------------------------------------------------------------