@@ -55,18 +55,24 @@
 
 		<p>Translations Copyright (c) 2008, 2009
 		<ul>
-		<li>Catala     - Illes Balears</li>
-		<li>Chinese    - muzuiget</li>
-		<li>Dutch      - Wim Kerstens</li>
-		<li>French     - Pascal Crozet</li>
-		<li>German     - Stefan Geuken</li>
-		<li>Greek      - Konstantinos Kapoukranidis</li>
-		<li>Hungarian  - Nagy Zsolt</li>
-		<li>Italian    - Paolo Loggia</li>
-		<li>Portuguese - Ricardo A. Garcia</li>
-		<li>Russian    - Dmitri Arkhangelski</li>
-		<li>Slovak     - Milan Cerovsky /Milanbb55/</li>
-		<li>Slovenian  - Miha Mlakar</li>
+		<li>Catala          - Illes Balears</li>
+		<li>Chinese         - muzuiget</li>
+		<li>Czech           - David Horak /Dave MacBlack/</li>
+		<li>Dutch           - Wim Kerstens</li>
+		<li>French          - Pascal Crozet</li>
+		<li>German          - Stefan Geuken</li>
+		<li>Greek           - Konstantinos Kapoukranidis</li>
+		<li>Hungarian       - Nagy Zsolt</li>
+		<li>Italian         - Paolo Loggia</li>
+		<li>Korean          - Alex Han</li>
+		<li>Latvian         - Vladislav Stuzhnev</li>
+		<li>Polish          - Andrzej Rudnik</li>
+		<li>Portuguese      - Ricardo A. Garcia</li>
+		<li>Portuguese (BR) - Depeo da Masol</li>
+		<li>Russian         - Dmitri Arkhangelski</li>
+		<li>Slovak          - Milan Cerovsky /Milanbb55/</li>
+		<li>Slovenian       - Miha Mlakar</li>
+		<li>Spanish (AR)    - Daniel Testa</li>
 		</ul>
 		</p>
 		
