@@ -85,9 +85,9 @@ Language=Hungarian
 
 		<p>Set <span class="code">Language=LanguageName</span> to choose your preferred language to be used by 
 		portable GUI. Available languages are: <span class="code">Catala, Chinese (Simplified), 
-		Chinese (Traditional), Dutch,
-		English (US), French (FR), German, Greek, Hungarian, Italian, 
-		Portuguese, Russian, Slovak, Slovenian</span>.</p>
+		Chinese (Traditional), Czech, Dutch,
+		English (US), French (FR), German, Greek, Hungarian, Italian, Korean, Latvian, Polish,
+		Portuguese, Portuguese (BR), Russian, Slovak, Slovenian, Spanish (AR)</span>.</p>
 	</div>
 </div>
 
