@@ -14,7 +14,7 @@ Bottom=57
 Type=Droplist
 Text=DropList
 State=English (US)
-ListItems=English (US)|Catala|Chinese (Simplified)|Chinese (Traditional)|Dutch|French (FR)|German|Greek|Hungarian|Italian|Portuguese|Russian|Slovak|Slovenian
+ListItems=English (US)|Catala|Chinese (Simplified)|Chinese (Traditional)|Czech|Dutch|French (FR)|German|Greek|Hungarian|Italian|Korean|Latvian|Polish|Portuguese|Portuguese (BR)|Russian|Slovak|Slovenian|Spanish (AR)
 Left=92
 Right=210
 Top=60
